# Spring-It-On

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.h  controller.c  cubiceasing.c  damper.c  deadblending.c  doublespring.c  extrapolation.c  inertialeasing.c  inertialization.c  interpolation.c  resonance.c  smoothing.c  springdamper.c  timedspring.c  tracking.c  velocityspring.c
